<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="testing.energysistem.com.batterytest.ValoracionActivity">

    <TextView
        android:id="@+id/valoracion_tv_nameDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAME DEVICE" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"></View>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"></View>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valoracion_tv_duracion" />


    <TextView
        android:id="@+id/valoracion_duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="h/min/->" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"></View>


    <TextView
        android:id="@+id/valoracion_tvModoFabricante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_radio_modo_fabricante" />


    <TextView
        android:id="@+id/valoracion_ResultadoModoFabricante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="........................." />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"></View>

    <TextView
        android:id="@+id/valoracion_ModoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_radio_modo_usuario" />

    <TextView
        android:id="@+id/valoracion_ResultadoModoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="........................." />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#ffd5d5d5"></View>

</LinearLayout>
